# multi-agent-template

./: .editorconfig  .env.common.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  CONVENTIONS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.gitlab/merge_request_templates/: default.md
agents/_example/: .env.agent.example  Makefile  pyproject.toml
agents/_example/src/example_agent/: __init__.py  settings.py
agents/_example/src/example_agent/api/: app.py
agents/_example/src/example_agent/application/: __init__.py
agents/_example/src/example_agent/domain/: __init__.py
agents/_example/tests/: test_app.py
common/: pyproject.toml
common/src/agent_common/: __init__.py  logging.py  settings.py
common/src/agent_common/gateway/: __init__.py
common/src/agent_common/pii/: __init__.py
common/src/agent_common/storage/: __init__.py
common/tests/: test_settings.py
docs/: DESIGN.md  MIGRATION.md
scripts/: check_commit_msg.py  lint_env_prefix.py  new_agent.py
