[project]
name = "example-agent"
version = "0.1.0"
description = "example_agent — 새 에이전트의 기준 구현체"
requires-python = ">=3.11"
dependencies = [
    # 공통 하네스에 의존(editable). 에이전트끼리는 절대 서로 의존하지 않는다.
    "agent-common",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",  # fastapi TestClient
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["example_agent*"]
